2004-02-13  Not Zed  <NotZed@Ximian.com>

	* importers/netscape-importer.c: use mail-importer to import the
	mail tree, fix the account stuff to talk directly to mail config.
	Added cancel button.  etc.  This is completely untested apart from
	compiling with no warnings.

	* importers/mail-importer.c (import_mbox_import): dont re-use the
	exception for syncing.

	* importers/evolution-outlook-importer.c: major reworking.  Some
	platform fixes, runs in another thread, simpler/cleaner main loop.
	This is completely untested apart from compiling with no warnings.

	* importers/evolution-mbox-importer.c (support_format_fn): we dont
	want to check the From_ line case insensitive!
	(create_control_fn): implement this weird api.

2004-02-12  Not Zed  <NotZed@Ximian.com>

	* importers/elm-importer.c: rewrote all importing stuff.

	* importers/mail-importer.c (mail_importer_import_folders_sync):
	split out into a recursive function & entry.  Now handles mozilla
	format stuff with a flag.
	(import_mbox_import): made the cameloperation properly
	save/restore multiple registrations.

2004-02-12  Radek Doulik  <rodo@ximian.com>

	* em-junk-filter.c (pipe_to_sa_with_error): use
	g_find_program_in_path to avoid fork in case program is not
	available

2004-02-11  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-component.c (mail_control_new): Disable the
	bonobo-ui-component statusbar when using the EMFolderBrowser
	outside of the mail component. This prevents the Connector
	component from having 2 status bars.

	* em-popup.c: #include <libgnomevfs/gnome-vfs-mime.h>
	(em_popup_create_menu): Wrap item->label with _() so
	that the strings get translated properly.

2004-02-11  Christian Neumair  <chris@gnome-de.org>

	* em-folder-tree-model.c (sort_cb): "On this Computer" -> "On This
	Computer".

	* mail-component.c (mc_setup_local_store): Ditto.

2004-02-11  Jeffrey Stedfast  <fejj@ximian.com>

	* em-format-html-print.c: Same.

	* em-junk-filter.c: #include <config.h>
